# gradio-custom-components

huggingfacehub/: README.md  pyproject.toml
huggingfacehub/backend/gradio_huggingfacehub_search/: __init__.py  huggingfacehub_search.py
huggingfacehub/demo/: app.py
huggingfacehub/frontend/: Index.svelte  app.css.tailwind  output.css  package-lock.json  package.json  tailwind.config.js
huggingfacehub/frontend/AuthorAvatar/: AuthorAvatar.svelte
huggingfacehub/frontend/BlockTile/: BlockTitle.svelte  Info.svelte
huggingfacehub/frontend/Icons/: IconArrowRight.svelte  IconCube.svelte  IconDataset.svelte  IconSearch.svelte  IconSpace.svelte
huggingfacehub/frontend/QuickSearch/: QuickSearch.svelte  Types.ts
huggingfacehub/frontend/QuickSearchEntry/: QuickSearchEntry.svelte  Types.ts
huggingfacehub/frontend/lib/: ViewUtils.ts
promptweighting/: README.md  pyproject.toml
promptweighting/backend/gradio_promptweighting/: __init__.py  promptweighting.py
promptweighting/backend/gradio_promptweighting/templates/component/: index.js  style.css
promptweighting/backend/gradio_promptweighting/templates/example/: index.js  style.css
promptweighting/demo/: app.py  space.py
promptweighting/frontend/: Example.svelte  Index.svelte  package-lock.json  package.json  types.ts
promptweighting/frontend/lib/: PrompstList.svelte  Prompt.svelte  store.ts
promptweighting/frontend/lib/Icons/: Cross.svelte  Minus.svelte  Plus.svelte  Undo.svelte  UpDown.svelte  UpDownLeftRight.svelte
