[build-system]
requires = [
  "hatchling",
  "hatch-requirements-txt",
  "hatch-fancy-pypi-readme>=22.5.0",
]
build-backend = "hatchling.build"

[project]
name = "gradio_huggingfacehub_search"
version = "0.0.3"
description = "Gradio component for searching Hugging Face Hub models, datasets, Spaces, and more"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "YOUR NAME", email = "YOUREMAIL@domain.com" }]
keywords = ["gradio-custom-component", "gradio-template-SimpleTextbox", "huggingface", "hub", "search"]
# Add dependencies here
dependencies = ["gradio>=4.0,<5.0"]
classifiers = [
  'Development Status :: 3 - Alpha',
  'License :: OSI Approved :: Apache Software License',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: Artificial Intelligence',
  'Topic :: Scientific/Engineering :: Visualization',
]

[project.optional-dependencies]
dev = ["build", "twine"]

[tool.hatch.build]
artifacts = ["/backend/gradio_huggingfacehub_search/templates", "*.pyi", "backend/gradio_huggingfacehub_search/templates", "backend/gradio_huggingfacehub_search/templates", "backend/gradio_huggingfacehub_search/templates"]

[tool.hatch.build.targets.wheel]
packages = ["/backend/gradio_huggingfacehub_search"]
